--- a/PRACTICAPARCIAL/css/estilos.css
+++ b/PRACTICAPARCIAL/css/estilos.css
@@ -3,17 +3,19 @@ table {
     width: 100%;
 }
 
+th {
+    background-color: lightseagreen;
+    color: black;
+    text-align: center;
+}
 th, td {
-    text-align: left;
+    text-align: center;
     padding: 8px;
 }
 
+
 tr:nth-child(even){background-color: #f2f2f2}
 
-th {
-    background-color: lightseagreen;
-    color: white;
-}
 input[type=text] {
     width: 100%;
     padding: 12px 20px;
