--- a/PRACTICAPARCIAL/css/estilos.css
+++ b/PRACTICAPARCIAL/css/estilos.css
@@ -1,6 +1,6 @@
 table {
     border-collapse: collapse;
-    width: 100%;
+    width: 70%;
 }
 
 th {
@@ -10,7 +10,7 @@ th {
 }
 th, td {
     text-align: center;
-    padding: 8px;
+    /* padding: 8px; */
 }
 
 
