--- a/FINAL_COMANDAv2/css/estilos.css
+++ b/FINAL_COMANDAv2/css/estilos.css
@@ -6,6 +6,7 @@
     -moz-border-radius: 50%;
     -webkit-border-radius: 50%;
     border-radius: 50%;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 #principal{
@@ -16,6 +17,7 @@
     text-align: center;
     padding-bottom: 20px;
 }
+
 
 #box-primary
 {
@@ -30,6 +32,11 @@ table{
 
 table thead th{
     text-align: center;
+}
+
+title 
+{
+    color: #ffffff;
 }
 
 .filtro{
