OK, ultimo antes de Terminar por hoy

--- a/FINAL_COMANDAv3/css/estilos.css
+++ b/FINAL_COMANDAv3/css/estilos.css
@@ -25,7 +25,7 @@
   padding: 8px 10px;
 }
 
-#btnAgregarEmpleado,#botonNuevoEmp,#botonModificar,#btnAgregarMesa,#botonAgregarPed,#btnNuevaMesa
+#btnAgregarEmpleado,#botonNuevoEmp,#botonModificar,#btnAgregarMesa,#botonAgregarPed,#btnNuevaMesa,#btnAgregarPedMoZ
 {
   font-size: 15px;
 }
